--- a/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
+++ b/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="RlL-VG-lub">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="RlL-VG-lub">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - IRSignals-->
+        <!--View Controller - Simple-->
         <scene sceneID="Tyh-jD-YlZ">
             <objects>
                 <tableViewController id="69H-mO-Zuk" customClass="MMViewController" sceneMemberID="viewController">
@@ -15,8 +15,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </tableView>
-                    <navigationItem key="navigationItem" title="IRSignals" id="rsV-1g-gem">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dx4-eH-HtZ">
+                    <navigationItem key="navigationItem" title="Simple" id="rsV-1g-gem">
+                        <barButtonItem key="leftBarButtonItem" image="icn_actionbar_menu.png" id="wQB-jg-w0d"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="dx4-eH-HtZ">
                             <connections>
                                 <action selector="addButtonTouched:" destination="69H-mO-Zuk" id="gXc-yZ-cNP"/>
                             </connections>
@@ -45,6 +46,9 @@
             <point key="canvasLocation" x="-768" y="118"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icn_actionbar_menu.png" width="24" height="24"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
